<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.aquiva.autotests</groupId>
    <artifactId>rc-autotests</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <project.encoding>UTF-8</project.encoding>
        <project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
        <project.reporting.outputEncoding>${project.encoding}</project.reporting.outputEncoding>

        <maven.checkstyle.plugin.version>3.3.0</maven.checkstyle.plugin.version>
        <maven.surefire.plugin.version>3.0.0-M5</maven.surefire.plugin.version>

        <java.version>17</java.version>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.source>${java.version}</maven.compiler.source>

        <!-- Selenium tools-->
        <selenide.version>7.5.1</selenide.version>
        <!-- Get the correct version in the latest main Selenide library above, for consistency -->
        <littleproxy.version>2.3.0</littleproxy.version>

        <!-- Testing tools -->
        <junit.version>5.9.2</junit.version>
        <assertj.version>3.24.2</assertj.version>
        <allure.version>2.21.0</allure.version>
        <allure.maven.version>2.12.0</allure.maven.version>
        <aspectj.version>1.9.19</aspectj.version>

        <!-- Salesforce Tools -->
        <force.api.version>61.0.0</force.api.version>
        <force.rc.api.version>20250225</force.rc.api.version>

        <!-- HTTP Clients -->
        <apache.httpclient.version>4.5.12</apache.httpclient.version>
        <apache.httpcore.version>4.4.13</apache.httpcore.version>

        <!-- JSON/CSV Parsers -->
        <jackson.version>2.14.2</jackson.version>
        <org.json.version>20200518</org.json.version>
        <opencsv.version>4.3.2</opencsv.version>

        <!-- Loggers -->
        <slf4j.version>2.0.0-alpha1</slf4j.version>
        <logback.version>1.3.0-alpha5</logback.version>

        <!-- Misc -->
        <classgraph.version>4.8.138</classgraph.version>
    </properties>

    <dependencies>
        <!-- Selenium tools-->
        <dependency>
            <groupId>com.codeborne</groupId>
            <artifactId>selenide-proxy</artifactId>
            <version>${selenide.version}</version>
        </dependency>
        <dependency>
            <groupId>com.codeborne</groupId>
            <artifactId>selenide-selenoid</artifactId>
            <version>${selenide.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.littleproxy</groupId>
            <artifactId>littleproxy</artifactId>
            <version>${littleproxy.version}</version>
        </dependency>

        <!-- Testing tools -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit.version}</version>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
        </dependency>

        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-junit5</artifactId>
            <version>${allure.version}</version>
        </dependency>
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-assertj</artifactId>
            <version>${allure.version}</version>
        </dependency>
        <dependency>
            <groupId>ru.yandex.qatools.ashot</groupId>
            <artifactId>ashot</artifactId>
            <version>1.5.4</version>
            <exclusions>
                <exclusion>
                    <groupId>org.seleniumhq.selenium</groupId>
                    <artifactId>selenium-remote-driver</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.hamcrest</groupId>
                    <artifactId>hamcrest-core</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
            <version>${aspectj.version}</version>
        </dependency>

        <!-- Salesforce Tools -->
        <dependency>
            <groupId>com.force.api</groupId>
            <artifactId>rc-salesforce-enterprise-api</artifactId>
            <version>${force.rc.api.version}</version>
        </dependency>
        <dependency>
            <groupId>com.force.api</groupId>
            <artifactId>rc-salesforce-tooling-api</artifactId>
            <version>${force.rc.api.version}</version>
        </dependency>
        <dependency>
            <groupId>com.force.api</groupId>
            <artifactId>force-metadata-api</artifactId>
            <version>${force.api.version}</version>
        </dependency>
        <dependency>
            <groupId>com.force.api</groupId>
            <artifactId>force-wsc</artifactId>
            <version>${force.api.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- HTTP Clients -->
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpcore</artifactId>
            <version>${apache.httpcore.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>${apache.httpclient.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- JSON/CSV Parsers -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.module</groupId>
            <artifactId>jackson-module-blackbird</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.module</groupId>
            <artifactId>jackson-module-mrbean</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>${org.json.version}</version>
        </dependency>
        <dependency>
            <groupId>com.opencsv</groupId>
            <artifactId>opencsv</artifactId>
            <version>${opencsv.version}</version>
        </dependency>

        <!-- Loggers -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jul-to-slf4j</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>

        <!-- Misc -->
        <dependency>
            <groupId>io.github.classgraph</groupId>
            <artifactId>classgraph</artifactId>
            <version>${classgraph.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${maven.checkstyle.plugin.version}</version>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <configuration>
                            <configLocation>google_checks.xml</configLocation>
                            <inputEncoding>UTF-8</inputEncoding>
                            <consoleOutput>false</consoleOutput>
                            <failsOnError>true</failsOnError>
                            <!--<linkXRef>false</linkXRef>-->
                        </configuration>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <configuration>
                    <properties>
                        <property>
                            <name>listener</name>
                            <value>io.qameta.allure.junit5.AllureJunit5</value>
                        </property>
                    </properties>
                    <includes>
                        <include>**/*Test</include>
                    </includes>
                    <forkCount>1</forkCount>
                    <reuseForks>true</reuseForks>
                    <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED
                        -Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties
                        -Djdk.net.URLClassPath.disableClassPathURLCheck=true
                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                    </argLine>
                    <systemPropertyVariables>
                        <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
                        <allure.link.tms.pattern>https://testit.ringcentral.com/test-cases/{}</allure.link.tms.pattern>
                        <allure.link.issue.pattern>https://jira.ringcentral.com/browse/{}</allure.link.issue.pattern>

                        <junit.jupiter.testinstance.lifecycle.default>per_class</junit.jupiter.testinstance.lifecycle.default>
                        <junit.jupiter.extensions.autodetection.enabled>true</junit.jupiter.extensions.autodetection.enabled>

                        <junit.jupiter.execution.parallel.enabled>true</junit.jupiter.execution.parallel.enabled>
                        <junit.jupiter.execution.parallel.mode.default>same_thread</junit.jupiter.execution.parallel.mode.default>
                        <junit.jupiter.execution.parallel.mode.classes.default>concurrent</junit.jupiter.execution.parallel.mode.classes.default>
                        <junit.jupiter.execution.parallel.config.strategy>custom</junit.jupiter.execution.parallel.config.strategy>
                        <junit.jupiter.execution.parallel.config.custom.class>com.aquiva.autotests.rc.internal.CustomParallelExecutionConfigurationStrategy</junit.jupiter.execution.parallel.config.custom.class>
                        <junit.parallelism>4</junit.parallelism>

                        <selenide.screenshots>false</selenide.screenshots>
                        <selenide.savePageSource>false</selenide.savePageSource>

                        <selenide.browser>chrome</selenide.browser>
                        <selenide.browserVersion>134.0</selenide.browserVersion>
                        <selenide.timeout>4000</selenide.timeout>
                        <selenide.pageLoadTimeout>120000</selenide.pageLoadTimeout>
                        <selenide.fastSetValue>true</selenide.fastSetValue>
                        <selenide.clickViaJs>false</selenide.clickViaJs>
                        <selenide.browserSize>3200x1800</selenide.browserSize>
                        <selenide.browserPosition>0x0</selenide.browserPosition>
                        <selenide.downloadsFolder>${project.build.directory}/downloads</selenide.downloadsFolder>
                        <selenide.fileDownload>FOLDER</selenide.fileDownload>
                        <selenide.remote>http://qtc01-t01-jen04.lab.nordigy.ru:4444/wd/hub</selenide.remote>
                    </systemPropertyVariables>
                    <trimStackTrace>true</trimStackTrace>
                    <disableXmlReport>true</disableXmlReport>
                    <reportFormat>plain</reportFormat>
                </configuration>
            </plugin>
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>${allure.maven.version}</version>
                <configuration>
                    <reportVersion>${allure.version}</reportVersion>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>ringcentral-nexus-3rd-party-repo</id>
            <url>https://nexus.int.rclabenv.com/nexus/content/repositories/thirdparty/</url>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>asf-nexus</id>
            <name>asf-nexus</name>
            <url>https://repository.apache.org/content/repositories/snapshots/</url>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
                <checksumPolicy>ignore</checksumPolicy>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>
</project>
